--- a/Workshop-PHP-Instructor/Dockerfile
+++ b/Workshop-PHP-Instructor/Dockerfile
@@ -1,4 +1,5 @@
 FROM    centos:7
+USER root
 RUN yum -y update && yum install -y httpd httpd-tools php php-mysql ansible git epel-release centos-release-openshift-origin screen 
 RUN yum -y install python-crypto python-pip origin-clients git && pip install --upgrade pip && pip install --upgrade apache-libcloud
 EXPOSE  80
