Fixes para ansible no caso dos Workshops de ansible

--- a/Workshop-PHP-Instructor/Dockerfile
+++ b/Workshop-PHP-Instructor/Dockerfile
@@ -4,8 +4,8 @@ RUN yum -y update && yum install -y httpd httpd-tools php php-mysql ansible git 
 RUN yum -y install python-crypto python-pip origin-clients git && pip install --upgrade pip 
 RUN pip install --upgrade apache-libcloud
 EXPOSE  80
-RUN mkdir -p /etc/ansible/playbooks/tmp && cd /etc/ansible/playbooks && git clone https://github.com/redhat-sa-brazil/workshop-onboarding.git 
-RUN chown -R apache /etc/ansible/playbooks && chown -R apache /root && echo 127.0.0.1 > /etc/ansible/hosts && ln -s /usr/bin/oc /usr/local/bin/oc
+RUN mkdir -p /etc/ansible/playbooks/tmp && cd /etc/ansible/playbooks && git clone https://github.com/redhat-sa-brazil/workshop-onboarding.git && mkdir /root/.ansible && mkdir /usr/share/httpd/.ssh
+RUN chown -R apache /etc/ansible/playbooks && chown -R apache /root && echo 127.0.0.1 > /etc/ansible/hosts && ln -s /usr/bin/oc /usr/local/bin/oc && chown -R apache /usr/share/httpd && chmod 600 /etc/ansible/playbooks/ssh_gce && chmod -R 777 /etc/ansible/playbooks/tmp
 COPY src/ /var/www/html/
 COPY src/php.ini /etc/php.ini
 COPY src/ansible.cfg /etc/ansible/ansible.cfg
