--- a/Workshop-PHP-Instructor/src/ansible.cfg
+++ b/Workshop-PHP-Instructor/src/ansible.cfg
@@ -14,7 +14,7 @@
 #inventory      = /etc/ansible/hosts
 #library        = /usr/share/my_modules/
 #module_utils   = /usr/share/my_module_utils/
-remote_tmp     = /etc/ansible/playbooks/tmp
+remote_tmp     = /tmp
 local_tmp      = /etc/ansible/playbooks/tmp
 #forks          = 5
 #poll_interval  = 15
@@ -58,7 +58,7 @@ local_tmp      = /etc/ansible/playbooks/tmp
 roles_path    = /etc/ansible/roles:/usr/share/ansible/roles
 
 # uncomment this to disable SSH key host checking
-#host_key_checking = False
+host_key_checking = False
 
 # change the default callback, you can only have one 'stdout' type  enabled at a time.
 #stdout_callback = skippy
@@ -362,7 +362,7 @@ roles_path    = /etc/ansible/roles:/usr/share/ansible/roles
 # Example: 
 # control_path_dir = /tmp/.ansible/cp
 #control_path_dir = ~/.ansible/cp
-
+control_path_dir = /etc/ansible/playbooks/tmp
 # The path to use for the ControlPath sockets. This defaults to a hashed string of the hostname, 
 # port and username (empty string in the config). The hash mitigates a common problem users 
 # found with long hostames and the conventional %(directory)s/ansible-ssh-%%h-%%p-%%r format. 
