--- a/Workshop-PHP-Instructor/Dockerfile
+++ b/Workshop-PHP-Instructor/Dockerfile
@@ -1,7 +1,7 @@
 FROM    centos:7
 USER root
 RUN yum -y update && yum install -y httpd httpd-tools php php-mysql ansible git epel-release centos-release-openshift-origin screen 
-RUN yum -y install python-crypto python-pip origin-clients git && pip install --upgrade pip 
+RUN yum -y install python-crypto python-pip origin-clients git ansible-tower-cli && pip install --upgrade pip 
 RUN pip install --upgrade apache-libcloud
 EXPOSE  80
 RUN mkdir -p /etc/ansible/playbooks/tmp && cd /etc/ansible/playbooks && git clone https://github.com/redhat-sa-brazil/workshop-onboarding.git && mkdir /root/.ansible && mkdir /usr/share/httpd/.ssh && touch /etc/ansible/playbooks/ssh_gce
