--- a/Workshop-PHP-Instructor/Dockerfile
+++ b/Workshop-PHP-Instructor/Dockerfile
@@ -13,4 +13,5 @@ COPY assets/httpd.conf /etc/httpd/conf/httpd.conf
 RUN mkdir /workshop-pv/ && chmod -R 777 /run/httpd && chmod -R 777 /etc/httpd/logs && chmod -R 777 /var/lib/php/ && chmod -R 777 /etc/ansible/ && chmod -R 777 /workshop-pv/ && chown -R 12345 /var/www/html/*
 # Nao foi possivel usar usuarios dinamicos devido ao ansible
 #USER 12345
+RUN chmod g+w /etc/passwd
 CMD     ["/usr/sbin/httpd","-D","FOREGROUND"]
