--- a/Workshop-PHP-Instructor/Dockerfile
+++ b/Workshop-PHP-Instructor/Dockerfile
@@ -14,8 +14,9 @@ RUN mkdir /workshop-pv/ && chmod -R 777 /run/httpd && chmod -R 777 /etc/httpd/lo
 # Nao foi possivel usar usuarios dinamicos devido ao ansible
 #USER 12345
 RUN yum -y install nss_wrapper gettext
-COPY assets/passwd.template /tmp/passwd.template
-COPY assets/entrypoint.sh /tmp/entrypoint.sh
-RUN chmod 777 /tmp/entrypoint.sh
+RUN mkdir /app && chmod -R 777 /app
+COPY assets/passwd.template /app/passwd.template
+COPY assets/entrypoint.sh /app/entrypoint.sh
+RUN chmod +x /app/entrypoint.sh
 #CMD     ["/usr/sbin/httpd","-D","FOREGROUND"]
-ENTRYPOINT ["/tmp/entrypoint.sh"]
+#ENTRYPOINT ["/app/entrypoint.sh"]
