--- a/Workshop-PHP-Instructor/assets/passwd.template
+++ b/Workshop-PHP-Instructor/assets/passwd.template
@@ -14,4 +14,4 @@ nobody:x:99:99:Nobody:/:/sbin/nologin
 systemd-network:x:192:192:systemd Network Management:/:/sbin/nologin
 dbus:x:81:81:System message bus:/:/sbin/nologin
 apache:x:48:48:Apache:/usr/share/httpd:/sbin/nologin
-${USER_ID}:x:${USER_ID}:${GROUP_ID}:Wrapper:/tmp/home:/bin/bash
+${USER_ID}:x:${USER_ID}:${GROUP_ID}:Wrapper:/app:/bin/bash
